[package]
name = "nimbus-prime-launcher"
version = "1.1.0"
edition = "2021"
authors = ["Nishant Paudel"]
description = "Ultra-high performance, zero-dependency native launcher for Nimbus Prime."
license = "MIT"
readme = "README.md"
repository = "https://github.com/nishantXnova/Nimbus-Prime"
keywords = ["minecraft", "launcher", "performance", "rust"]
categories = ["games"]

[dependencies]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Maximum optimization
panic = "abort"     # Remove panic strings
strip = true        # Strip symbols
